# bedrockpy

./: .gitignore  LICENSE  LICENSE.md  README.md  README_DE.md  pyproject.toml  tox.ini
.github/ISSUE_TEMPLATE/: custom.md  ❌-get-started.md  🐛-bug-report.md  💡-feature-request.md  📖-documentation.md  🖐️-my-project-uses-bedrockpy.md
docs/: 404.md  api.md  changelog.md  conf.py  credits.md  extensions.md  foreword.md  hello-world.md  index.md  installation.md  projects-using-bedrockpy.md  setup.md  troubleshooting.md  use-on-android.md
docs/_static/: mc.css  style.css
docs/_templates/: page.html
docs/blogs/: index.md  using-the-agent.md
docs/contributing/: index.md  translating.md  writing.md
docs/development/: index.md
examples/: README.md  all_events.py  disco.py  hidden_commands.py  overflow.py  performance.py  pingpong.py  response.py  simultaneously.py
schemas/: README.md
schemas/response/events/: block_placed.json
src/bedrock/: __init__.py  _demo.py  consts.py  context.py  events.py  exceptions.py  request.py  response.py  server.py  utils.py
src/bedrock/ext/ui/: __init__.py
